--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ main {
 .results-container {
     position: relative;
     /* Adjusted height to make it longer */
-    height: calc(100vh - 450px);
+    height: calc(100vh - 225px); /* Doubled effective height */
     display: flex;
     flex-direction: column;
     border: 1px solid #e9ecef; /* Light border */
